name:               pipes-network-tls
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
copyright:          Copyright (c) Renzo Carbonara 2013
author:             Renzo Carbonara
maintainer:         renzocarbonaraλgmail.com
stability:          Experimental
tested-with:        GHC == 7.4.1
homepage:           https://github.com/k0001/pipes-network-tls
bug-reports:        https://github.com/k0001/pipes-network-tls/issues
category:           Pipes, Network
build-type:         Simple
synopsis:           Use TLS-secured network sockets together with the pipes library.
cabal-version:      >=1.8
extra-source-files: README.md PEOPLE
description:
  Use TLS-secured network sockets together with the @pipes@ library.
  .
  This package is organized using the following namespaces:
  .
  * "Control.Proxy.TCP.TLS" exports @pipes@ proxies and functions to
  deal with TLS-secured TCP connections. Such proxies don't acquire nor
  release new resources within a proxy pipeline.
  .
  * "Control.Proxy.TCP.TLS.Safe" exports @pipes-safe@ proxies and
  functions to deal with TLS-secured TCP connections. Such proxies may
  safely acquire and release resources within a pipeline, using the
  facilities provided by the @pipes-safe@ package.

source-repository head
    type: git
    location: git://github.com/k0001/pipes-network-tls.git

library
    hs-source-dirs: src
    build-depends:
        base                (==4.*),
        bytestring          (>=0.9.2.1),
        network,
        network-simple-tls  (>=0.1 && <0.2),
        pipes               (>=3.3 && <3.4),
        pipes-safe          (>=1.2 && <1.3),
        pipes-network       (>=0.5 && <0.6),
        tls                 (>=1.1 && <1.2),
        transformers        (>=0.2 && <0.4)
    exposed-modules:
        Control.Proxy.TCP.TLS
        Control.Proxy.TCP.TLS.Safe
    ghc-options: -Wall -fno-warn-unused-do-bind




------------------------------------------------------------------------
-- Examples. All built when the 'examples' flag is given.

flag examples
  description:         Build examples
  default:             False

executable pipes-network-tls-example-echo
  if !flag(examples)
    buildable: False
  hs-source-dirs:      examples
  main-is:             tls-echo.hs
  build-depends:       base, bytestring
                     , bytestring
                     , network-simple-tls
                     , network
                     , tls-extra
                     , tls
                     , certificate
                     , network-simple-tls
                     , pipes
                     , pipes-network-tls
                     , async
  ghc-prof-options: -prof -fprof-auto
  ghc-options: -O2 -threaded


executable pipes-network-tls-example-tunnel
  if !flag(examples)
    buildable: False
  hs-source-dirs:      examples
  main-is:             tls-tunnel.hs
  build-depends:       base
                     , bytestring
                     , network-simple-tls
                     , network
                     , tls-extra
                     , tls
                     , certificate
                     , network-simple-tls
                     , pipes
                     , pipes-network-tls
                     , async
  ghc-prof-options: -prof -fprof-auto
  ghc-options: -O2 -threaded
